# examples_ml

./: .gitignore  Makefile  pyproject.toml
src/data/: createLinearlyInseperableData.py  createLinearlySeperableData.py
